--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -35,6 +35,7 @@
             app:shapeAppearanceOverlay="@style/corner" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:visibility="gone"
             android:id="@+id/rv_favorite"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -44,5 +45,29 @@
             app:spanCount="2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_favorite" />
+
+        <ImageView
+            android:id="@+id/iv_empty"
+            android:layout_width="215dp"
+            android:layout_height="225dp"
+            android:src="@drawable/ic_state_product"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.407" />
+
+        <TextView
+            android:id="@+id/tv_empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/empty_favorite"
+            android:textStyle="bold"
+            android:layout_marginTop="-20sp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_empty"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
